Disable modification by root network (#678)
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>